<resources>
    <string name="app_name">Calculator</string>
    <string name="inputText">123456789</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_0">0</string>
    <string name="clear">CLEAR</string>
    <string name="plus">+</string>
    <string name="answer">ANSWER</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="dot">.</string>
</resources>