<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/ironman">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="bottom|right"
        android:textSize="48sp"
        android:background="@color/lightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_7"
            android:onClick="onDigit"
            tools:ignore="Suspicious0dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_8"
            android:onClick="onDigit"
            tools:ignore="Suspicious0dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_9"
            android:onClick="onDigit"
            tools:ignore="Suspicious0dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/divide"
            android:onClick="onOperator"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/four"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_4"
            android:onClick="onDigit"
            tools:ignore="Suspicious0dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/five"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_5"
            android:onClick="onDigit"
            tools:ignore="Suspicious0dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/six"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_6"
            android:onClick="onDigit"
            tools:ignore="Suspicious0dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/multiply"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/one"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_1"
            android:onClick="onDigit"
            tools:ignore="Suspicious0dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/two"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_2"
            android:onClick="onDigit"
            tools:ignore="Suspicious0dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/three"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_3"
            android:onClick="onDigit"
            tools:ignore="Suspicious0dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:text="@string/minus"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/dot"
            android:onClick="onDecimalPoint"
            tools:ignore="Suspicious0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_0"
            android:onClick="onDigit"
            tools:ignore="Suspicious0dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/clear"
            android:onClick="onClear"
            tools:ignore="Suspicious0dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/plus"
            android:onClick="onOperator"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/equalTo"
            android:layout_width="0dp"
            android:backgroundTint="@color/my_light_primary"
            android:textSize="24sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onAnswer"
            android:layout_margin="2dp"
            android:text="@string/answer"
            tools:ignore="Suspicious0dp" />


    </LinearLayout>


</LinearLayout>